--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,7 +5,6 @@
     <div class="home">
 
         <!-- Home Slider -->
-
         <div class="home_slider_container">
             <div class="owl-carousel owl-theme home_slider">
 
@@ -13,28 +12,23 @@
                 <!--THIS DIV IS GOING TO BE FOR-EACHED!-->
                 <!-- slider shows as many as we pass to it costom.js initHomeSlider() -->
 
-                <div class="owl-item">
-                    <div class="home_slider_background" style="background-image:url(images/regular.jpg)"></div>
+                {% for sliderItem in sliderArticles %}
+
+                    <div class="owl-item">
+                    <div class="home_slider_background" style="background-image:url('{{ sliderItem.article.backgroundImageLink }}')"></div>
                     <div class="home_slider_content_container">
                         <div class="container">
                             <div class="row">
                                 <div class="col">
                                     <div class="home_slider_content">
-                                        <div class="home_slider_item_category trans_200"><a href="category.html"
-                                                                                            class="trans_200">Novini</a>
+                                        <div class="home_slider_item_category trans_200"><a href="category.html" class="trans_200">{{ sliderItem.article.category.categoryName }}</a>
                                         </div>
                                         <div class="home_slider_item_title">
-                                            <a href="post.html">HOW DID I MANAGE TO GET HERE</a>
+                                            <a href="{{ path('show_article', {'id':sliderItem.article.id}) }}">{{ sliderItem.article.title }}</a>
                                         </div>
                                         <div class="home_slider_item_link">
-                                            <a href="post.html" class="trans_200">{{ localLang.readMore }}
-                                                <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg"
-                                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                     width="19px" height="13px" viewBox="0 0 19 13"
-                                                     enable-background="new 0 0 19 13" xml:space="preserve">
-													<polygon fill="#FFFFFF"
-                                                             points="12.475,0 11.061,0 17.081,6.021 0,6.021 0,7.021 17.038,7.021 11.06,13 12.474,13 18.974,6.5 "/>
-												</svg>
+                                            <a href="{{ path('show_article', {'id': sliderItem.article.id}) }}" class="trans_200">
+                                                {{ localLang.readMore }}<i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                             </a>
                                         </div>
                                     </div>
@@ -48,148 +42,46 @@
                         <div class="container">
                             <div class="row d-flex flex-row align-items-end">
 
-                                <!-- Similar Post -->
+                                <!-- Similar Posts -->
+                                {% for similarArticle in sliderItem.similarArticles %}
                                 <div class="col-lg-3 col-md-6 similar_post_col">
                                     <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
+                                        <a href="{{ path('show_article',{'id':similarArticle.id}) }}">{{ similarArticle.title }}</a>
                                     </div>
                                 </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
+                                {% endfor %}
                             </div>
                         </div>
 
                         <div class="home_slider_next_container">
-                            <div class="home_slider_next" style="background-image:url(images/home_slider_next.jpg)">
+                            <div class="home_slider_next" style="background-image:url('{{ sliderItem.nextArticle.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;">
                                 <div class="home_slider_next_background trans_400"></div>
                                 <div class="home_slider_next_content trans_400">
                                     <div class="home_slider_next_title">{{ localLang.nextArticle }}</div>
-                                    <div class="home_slider_next_link">How Did van Gogh’s Turbulent Mind Depict One of
-                                        the Most Complex Concepts in Physics?
-                                    </div>
+                                    <div class="home_slider_next_link">{{ sliderItem.nextArticle.title }}</div>
                                 </div>
                             </div>
                         </div>
 
                     </div>
                 </div>
-
-                <!-- Slider Item -->
-                <div class="owl-item">
-                    <div class="home_slider_background" style="background-image:url(images/home_slider.jpg)"></div>
-                    <div class="home_slider_content_container">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="home_slider_content">
-                                        <div class="home_slider_item_category trans_200"><a href="category.html"
-                                                                                            class="trans_200">sport</a>
-                                        </div>
-                                        <div class="home_slider_item_title">
-                                            <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most
-                                                Complex Concepts in Physics?</a>
-                                        </div>
-                                        <div class="home_slider_item_link">
-                                            <a href="post.html" class="trans_200">Continue Reading
-                                                <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg"
-                                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                                     width="19px" height="13px" viewBox="0 0 19 13"
-                                                     enable-background="new 0 0 19 13" xml:space="preserve">
-													<polygon fill="#FFFFFF"
-                                                             points="12.475,0 11.061,0 17.081,6.021 0,6.021 0,7.021 17.038,7.021 11.06,13 12.474,13 18.974,6.5 "/>
-												</svg>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Similar Posts -->
-                    <div class="similar_posts_container">
-                        <div class="container">
-                            <div class="row d-flex flex-row align-items-end">
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                                <!-- Similar Post -->
-                                <div class="col-lg-3 col-md-6 similar_post_col">
-                                    <div class="similar_post trans_200">
-                                        <a href="post.html">How Did van Gogh’s Turbulent Mind Depict One of the Most</a>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="home_slider_next_container">
-                            <div class="home_slider_next" style="background-image:url(images/home_slider_next.jpg)">
-                                <div class="home_slider_next_background trans_400"></div>
-                                <div class="home_slider_next_content trans_400">
-                                    <div class="home_slider_next_title">next</div>
-                                    <div class="home_slider_next_link">How Did van Gogh’s Turbulent Mind Depict One of
-                                        the Most Complex Concepts in Physics?
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
+                {% endfor %}
                 <!-- Slider Item -->
 
             </div>
 
             <div class="custom_nav_container home_slider_nav_container">
                 <div class="custom_prev custom_prev_home_slider">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                         x="0px" y="0px"
-                         width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12"
-                         xml:space="preserve">
-						<polyline fill="#FFFFFF"
-                                  points="0,5.61 5.609,0 7,0 7,1.438 2.438,6 7,10.563 7,12 5.609,12 -0.002,6.39 "/>
-					</svg>
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
                 </div>
                 <ul id="custom_dots" class="custom_dots custom_dots_home_slider">
-                    <li class="custom_dot custom_dot_home_slider active"><span></span></li>
-                    <li class="custom_dot custom_dot_home_slider"><span></span></li>
-                    <li class="custom_dot custom_dot_home_slider"><span></span></li>
+
+                    {% for i in sliderArticles %}
+                        <li class="custom_dot custom_dot_home_slider"><span></span></li>
+                    {% endfor %}
                 </ul>
                 <div class="custom_next custom_next_home_slider">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                         x="0px" y="0px"
-                         width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12"
-                         xml:space="preserve">
-						<polyline fill="#FFFFFF"
-                                  points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 "/>
-					</svg>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </div>
             </div>
 
@@ -197,7 +89,8 @@
     </div>
 
     <div class="page_content">
-        <div class="container" style="	background: linear-gradient(to right,rgba(221, 232, 106,0.3), rgba(221, 232, 255,1));">
+        <div class="container">
+            <!--style="	background: linear-gradient(to right,rgba(221, 232, 106,0.3), rgba(221, 232, 255,1));" -->
             <div class="row row-lg-eq-height">
 
                 <!-- Main Content -->
@@ -323,7 +216,25 @@
                             <div class="section_panel d-flex flex-row align-items-center justify-content-start">
                                 <div class="section_title">{{ localLang.subscribe }}</div>
                             </div>
-                                {% embed 'partials/lang/' ~  localLang.localLang ~'/subscribe-form.html.twig' %}{% endembed %}
+                            {% embed 'partials/lang/' ~  localLang.localLang ~'/subscribe-form.html.twig' %}{% endembed %}
+                        </div>
+
+
+                        <!--  example quote -->
+                        <div class="blog_section">
+                            <div class="section_panel d-flex flex-row">
+                                <div class="section_title">Ричард бах</div>
+                            </div>
+
+                            <div class="section_content">
+                                <hr>
+                                <div class="flex align-items-center">
+                                    Може ли разстоянието наистина да те раздели от приятелите ти... Ако искаш да си с
+                                    някого, когото обичаш, не си ли вече там при него?
+                                </div>
+                                <hr>
+                            </div>
+
                         </div>
 
                         <!-- Blog Section - Latest -->
@@ -336,18 +247,21 @@
                                 <div class="grid clearfix">
 
 
-
                                     {% for post in latestPosts %}
-                                    <!-- Small Card With Background -->
-                                    <div class="card card_default card_small_with_background grid-item">
-                                        <div class="card_background"
-                                             style="background:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('{{ post.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;"></div>
-                                        <div class="card-body">
-                                            <div class="card-title card-title-small"><a href="{{ path('show_article', {'id': post.id}) }}">{{ post.title }}</a></div>
-                                            <small class="post_meta "><a href="#" class="text-light">{{ post.author.username }}</a><span class="text-light">{{ post.dateAdded.format("d - M - Y") }}</span>
-                                            </small>
+                                        <!-- Small Card With Background -->
+                                        <div class="card card_default card_small_with_background grid-item">
+                                            <div class="card_background"
+                                                 style="background:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('{{ post.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;"></div>
+                                            <div class="card-body">
+                                                <div class="card-title card-title-small"><a
+                                                            href="{{ path('show_article', {'id': post.id}) }}">{{ post.title }}</a>
+                                                </div>
+                                                <small class="post_meta "><a href="#"
+                                                                             class="text-light">{{ post.author.username }}</a><span
+                                                            class="text-light">{{ post.dateAdded.format("d - M - Y") }}</span>
+                                                </small>
+                                            </div>
                                         </div>
-                                    </div>
 
                                     {% endfor %}
 
