--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,9 @@
     {% block facebookMetas %} {% endblock %}
     <!-- end facebook -->
 
+    <!-- custom fonts -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cookie" />
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/bootstrap4/bootstrap.min.css') }}">
     <link href="{{ asset('styles/plugins/font-awesome-4.7.0/css/font-awesome.min.css') }}" rel="stylesheet"
@@ -30,6 +33,9 @@
     <link rel="stylesheet" type="text/css"
           href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.theme.default.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/animate.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/additional_styles.css') }}">
+
+
     {#<link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.css') }}">#}
 
     {% block stylesheets %}{% endblock %}
