--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -3,7 +3,7 @@
         <div class="row row-lg-eq-height">
             <div class="col-lg-9 order-lg-1 order-2">
                 <div class="footer_content">
-                    <div class="footer_logo"><a href="#">{{ twigInformer.websiteName }}</a></div>
+                    <div class="footer_logo"><a href="#"><span class="font-cookie"> {{ twigInformer.websiteName }}</span></a></div>
                     <div class="footer_social">
                         <ul>
                             <li class="footer_social_facebook"><a target="_blank" href="https://www.facebook.com/jesterousblog/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
