--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col">
                 <div class="header_content d-flex flex-row align-items-center justify-content-start">
-                    <div class="logo"><a href="/"><img src="{{ asset('images/jesterous-logo.png') }}" class="logo" style="max-height: 85px;" alt="">{{ twigInformer.websiteName }}</a></div>
+                    <div class="logo"><a href="/"><img src="{{ asset('images/jesterous-logo.png') }}" class="logo" style="max-height: 85px;" alt="">
+                            <span class="font-cookie"><span>{{ twigInformer.websiteName }}</span></span></a></div>
                     <nav class="main_nav">
                         <ul>
                             <li class="route-"><a href="/">{{ localLang.home }}</a></li>
@@ -54,7 +55,7 @@
             <div></div>
         </div>
     </div>
-    <div class="logo menu_mm"><a href="#"s>{{ twigInformer.websiteName }}</a></div>
+    <div class="logo menu_mm"><a href="#">{{ twigInformer.websiteName }}</a></div>
     <div class="search">
         <form action="#">
             <input type="search" class="header_search_input menu_mm" required="required"
