added comments, worked on article page

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -537,6 +537,7 @@
 
 {% block javascripts %}
     {#<script src="{{ asset('styles/plugins/jquery.mb.YTPlayer-3.1.12/jquery.mb.YTPlayer.js') }}"></script>#}
+    <script src="{{ asset('styles/js/custom.js') }}"></script>
     <script>
         var numberOfLatestArticles = Number('{{ latestPosts|length }}');
 
