--- a/app/Resources/views/partials/scripts.html.twig
+++ b/app/Resources/views/partials/scripts.html.twig
@@ -8,7 +8,7 @@
     <!-- these scripts are not present in all pages -->
     <script src="{{ asset('styles/plugins/masonry/images_loaded.js') }}"></script>
     <script src="{{ asset('styles/plugins/parallax-js-master/parallax.min.js') }}"></script>
-    <script src="{{ asset('styles/js/custom.js') }}"></script>
+    {#<script src="{{ asset('styles/js/custom.js') }}"></script> TODO put consider putting every init function in here (since article details page doesnt go well with custom.js)#}
 
     <!-- custom scripts by backendDevs -->
     <script src="{{ asset('styles/js/lang-manager.js') }}"></script>
