--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,11 +27,9 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cookie" />
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/bootstrap4/bootstrap.min.css') }}">
-    <link href="{{ asset('styles/plugins/font-awesome-4.7.0/css/font-awesome.min.css') }}" rel="stylesheet"
-          type="text/css">
+    <link href="{{ asset('styles/plugins/font-awesome-4.7.0/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.carousel.css') }}">
-    <link rel="stylesheet" type="text/css"
-          href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.theme.default.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.theme.default.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/plugins/OwlCarousel2-2.2.1/animate.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/additional_styles.css') }}">
 
