--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -10,6 +10,12 @@
                             <li class="route-"><a href="/">{{ localLang.home }}</a></li>
                             <li class="route-categories"><a href="{{ path('categories_page') }}">{{ localLang.blogPosts }}</a></li>
                             <li class="route-contacts"><a href="{{ path('contacts_page') }}">{{ localLang.contacts }}</a></li>
+                            {% if app.user %}
+                                <li class="route-logout"><a href="{{ path('security_logout') }}">{{ localLang.logout }}</a> </li>
+                            {% else %}
+                                <li class="route-login"><a href="{{ path('security_login') }}">{{ localLang.login }}</a> </li>
+                                <li class="route-register"><a href="{{ path('security_register') }}">{{ localLang.register }}</a> </li>
+                            {% endif %}
                         </ul>
                     </nav>
                     <div class="search_container ml-auto">
@@ -68,6 +74,12 @@
             <li class="menu_mm"><a href="/">{{ localLang.home }}</a></li>
             <li class="menu_mm"><a href="{{ path('categories_page') }}">{{ localLang.blogPosts }}</a></li>
             <li class="menu_mm"><a href="{{ path('contacts_page') }}">{{ localLang.contacts }}</a></li>
+            {% if app.user %}
+                <li class="menu_mm"><a href="{{ path('security_logout') }}">{{ localLang.logout }}</a> </li>
+            {% else %}
+                <li class="menu_mm"><a href="{{ path('security_login') }}">{{ localLang.login }}</a> </li>
+                <li class="menu_mm"><a href="{{ path('security_register') }}">{{ localLang.register }}</a> </li>
+            {% endif %}
         </ul>
     </nav>
 </div>
