--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -16,12 +16,8 @@
                         </ul>
                     </div>
                     <div class="copyright">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                        All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                                                            aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+                        All rights reserved | Avision by  <a href="https://colorlib.com" target="_blank">Colorlib</a></div>
                 </div>
             </div>
             <div class="col-lg-3 order-lg-2 order-1">
@@ -32,13 +28,7 @@
                         <form action="#">
                             <input type="email" class="sub_input" placeholder="{{ localLang.yourEmail }}" required="required">
                             <button class="sub_button">
-                                <svg version="1.1" id="link_arrow_1" xmlns="http://www.w3.org/2000/svg"
-                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                     width="19px" height="13px" viewBox="0 0 19 13" enable-background="new 0 0 19 13"
-                                     xml:space="preserve">
-										<polygon fill="#FFFFFF"
-                                                 points="12.475,0 11.061,0 17.081,6.021 0,6.021 0,7.021 17.038,7.021 11.06,13 12.474,13 18.974,6.5 "/>
-									</svg>
+                                <i class="fa fa-long-arrow-right text-light" aria-hidden="true"></i>
                             </button>
                         </form>
                     </div>
